[package]
name = "whois-that"
version = "0.1.1"
edition = "2024"
license = "MIT"
authors = ["supercoolspy"]
repository = "https://github.com/supercoolspy/whois-that"
readme = "README.md"
description = "A feature full whois client library with support for non-UTF8 responses"
exclude = [".github"]

[features]
default = ["serde", "decode-global", "idna"]
idna = ["dep:idna"]
serde = ["dep:serde", "dep:serde_json", "dashmap/serde"]
decode-global = ["dep:encoding_rs"]

[dependencies]
dashmap = "6.1.0"
encoding_rs = { version = "0.8.35", optional = true }
idna = { version = "1.0.3", optional = true }
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
thiserror = "2.0.12"
tokio = { version = "1", features = ["net", "io-util"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
idna = { version = "1.0.3" }